feat: add email verify and password reset
